api function update
